# sdv-gateway-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml
config/: mapping.json
docs/adr/: ADR-001-grpc-over-mqtt-primary-transport.md  ADR-002-lock-free-spsc-queue-between-layers.md  ADR-003-data-driven-vss-mapping.md  ADR-004-uprotocol-future-communication-layer.md
proto/: README.md
scripts/: fetch-proto.sh  setup-vcan.sh
src/: CMakeLists.txt  SpscQueue.hpp  main.cpp
src/can/: CMakeLists.txt  ICANReader.hpp  SimulatedCANReader.cpp  SimulatedCANReader.hpp  SocketCANReader.cpp  SocketCANReader.hpp
src/decoder/: CMakeLists.txt  MappingConfig.cpp  MappingConfig.hpp  SignalDecoder.cpp  SignalDecoder.hpp  VssSignal.hpp  placeholder.cpp
src/kuksa/: CMakeLists.txt  ISignalPublisher.hpp  KuksaClient.cpp  KuksaClient.hpp  placeholder.cpp
src/vss/: CMakeLists.txt  placeholder.cpp
tests/: CMakeLists.txt  test_mapping_config.cpp  test_signal_decoder.cpp
tools/: CMakeLists.txt
tools/can-simulator/: CMakeLists.txt  Dockerfile  main.cpp  placeholder.cpp
